weilinfox/Month13/openkylin-test/boost1.71/thread-stderr
CMake Warning (dev) at CMakeLists.txt:1 (project):
  cmake_minimum_required() should be called prior to this top-level project()
  call.  Please see the cmake-commands(7) manual for usage documentation of
  both commands.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Deprecation Warning at CMakeLists.txt:2 (cmake_minimum_required):
  Compatibility with CMake < 3.5 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


In file included from /usr/include/pthread.h:33,
                 from /usr/include/boost/thread/pthread/mutex.hpp:11,
                 from /usr/include/boost/thread/mutex.hpp:16,
                 from /tmp/tmp.AoO560sF6u/src/demo1.cpp:12:
/usr/include/boost/thread/pthread/thread_data.hpp:60:5: error: missing binary operator before token "("
   60 | #if PTHREAD_STACK_MIN > 0
      |     ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/demo1.dir/build.make:76: CMakeFiles/demo1.dir/demo1.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:85: CMakeFiles/demo1.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
